// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accRating": 15.225,
  "accuracyPct": 8.225,
  "allStatTotal": 263,
  "atk": 189,
  "attackCount": 1,
  "classTier": undefined,
  "combatNumberScale": 3,
  "critChancePct": 8.6,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 148,
  "evaRating": 19.200000000000003,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 109,
  "healMult": 1.1500000000000001,
  "hp": 1920,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 24,
  "magicDef": 42,
  "maxHp": 1920,
  "maxMp": 227,
  "minDamage": 6,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 218,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accRating": 8.775,
  "accuracyPct": 1.775,
  "allStatTotal": 100,
  "atk": 33,
  "attackCount": 1,
  "classTier": undefined,
  "combatNumberScale": 3,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 11.25,
  "healMult": 1.1500000000000001,
  "hp": 570,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 24,
  "magicDef": 42,
  "maxHp": 570,
  "maxMp": 92,
  "minDamage": 9,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 22.5,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accRating": 11.684999999999999,
  "accuracyPct": 4.685,
  "allStatTotal": 253,
  "atk": 27,
  "attackCount": 1,
  "classTier": undefined,
  "combatNumberScale": 3,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 18,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 11.25,
  "healMult": 1.33,
  "hp": 1920,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 141,
  "magicDef": 129,
  "maxHp": 1920,
  "maxMp": 501,
  "minDamage": 27,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 22.5,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accRating": 10.825,
  "accuracyPct": 3.8249999999999997,
  "allStatTotal": 255,
  "atk": 87,
  "attackCount": 1,
  "classTier": undefined,
  "combatNumberScale": 3,
  "critChancePct": 16.2,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 60,
  "evaRating": 16.8,
  "evasionPct": 16.8,
  "extraAttackChancePct": 45,
  "healMult": 1.1500000000000001,
  "hp": 1920,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 24,
  "magicDef": 42,
  "maxHp": 1920,
  "maxMp": 227,
  "minDamage": 6,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 90,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accRating": 9.175,
  "accuracyPct": 2.175,
  "allStatTotal": 275,
  "atk": 114,
  "attackCount": 1,
  "classTier": undefined,
  "combatNumberScale": 3,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 90,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 8.75,
  "healMult": 1.7700000000000002,
  "hp": 2505,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 24,
  "magicDef": 42,
  "maxHp": 2505,
  "maxMp": 227,
  "minDamage": 30,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 17.5,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accRating": 11.235,
  "accuracyPct": 4.234999999999999,
  "allStatTotal": 263,
  "atk": 165,
  "attackCount": 1,
  "classTier": undefined,
  "combatNumberScale": 3,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 54,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 5.75,
  "healMult": 1.31,
  "hp": 2160,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 24,
  "magicDef": 42,
  "maxHp": 2160,
  "maxMp": 227,
  "minDamage": 51,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 11.5,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "58c521ddee69c0d04904009d6f711fb614f6d08a",
    "outcome": "win",
    "playerHp": 2160,
    "playerMp": 227,
    "turns": 6,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "2ec9f0df4c6d39353801e4132dfdd7c168b8c9d2",
    "outcome": "win",
    "playerHp": 2160,
    "playerMp": 227,
    "turns": 15,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "f2570c511e5444cf1bb3d095235b676de45c9d23",
    "outcome": "win",
    "playerHp": 1920,
    "playerMp": 227,
    "turns": 40,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "b1a7383ce2b3b95546367e037191a3434715a42c",
    "outcome": "win",
    "playerHp": 1904,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "e9ac836901bd0017b6d7e16f1b8ed40a2ba48e19",
    "outcome": "win",
    "playerHp": 1920,
    "playerMp": 501,
    "turns": 35,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "dfd3c8ac844871c23c6f570cd7fc3dc3a9e97765",
    "outcome": "win",
    "playerHp": 2457,
    "playerMp": 227,
    "turns": 47,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "5e6f029a5ac3bfdb8348667b60cce4b677074284",
    "outcome": "win",
    "playerHp": 2505,
    "playerMp": 227,
    "turns": 57,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "ed0e80106354b5f38d924c7284f87ef6f3243c04",
    "outcome": "win",
    "playerHp": 1920,
    "playerMp": 501,
    "turns": 14,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "9a60e2a8432cd5f31691ce2ef3f944861bedb130",
    "outcome": "win",
    "playerHp": 570,
    "playerMp": 92,
    "turns": 18,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "64a15e63ced7d79ea8ef94e0b9643fb21172a957",
    "outcome": "p1_win",
    "turns": 57,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "45cb5afd3303fded2050628250764acc57feb77b",
    "outcome": "p1_win",
    "turns": 49,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "21972101b8bcd41c08d22921f6b37716155fb201",
    "outcome": "p2_win",
    "turns": 139,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "19cd5c4a5aae86d528fdd26db852d397faf4ab15",
    "outcome": "win",
    "playerHp": 2152,
    "playerMp": 227,
    "turns": 17,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "09c1c69a26e3b31ccdf0cf3a925d0f331eb00f7e",
    "outcome": "win",
    "playerHp": 2421,
    "playerMp": 227,
    "turns": 29,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "7be770baac1572df6f34d6b9245a8399ef9a0d63",
    "outcome": "win",
    "playerHp": 2505,
    "playerMp": 227,
    "turns": 26,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "33757f6b1e6b5cafccff67e5675a166c91720fe6",
    "outcome": "win",
    "playerHp": 1876,
    "playerMp": 227,
    "turns": 61,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "9c49fc909a06fb5469231f3a428ef7905df1c6e5",
    "outcome": "win",
    "playerHp": 2160,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "2636102bdf6583c06d17d48f98e80a903994eaa3",
    "outcome": "win",
    "playerHp": 2144,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "63052fdbb9a4645f44d3477dc1274c909245bb54",
    "outcome": "win",
    "playerHp": 2457,
    "playerMp": 227,
    "turns": 55,
  },
]
`;
